// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CodeIcon should render a code icon 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
@media (min-width: 1200px) {
  .e {
    font-size: 2.5rem !important;
  }
}


<svg
  xmlns="http://www.w3.org/2000/svg"
  width="16"
  height="16"
  viewBox="0 0 16 16"
  role="img"
  class="a b c d e code-icon"
>
  <path
    d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"
  ></path></svg
>;
"
`;

exports[`components/CodeIcon should render a follow-up code icon 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.f {
  color: rgba(112.520718, 44.062154, 249.437846, 1) !important;
}
.g {
  -webkit-filter: drop-shadow(0 1px 1px #fff);
  filter: drop-shadow(0 1px 1px #fff);
}
.h {
  font-size: calc(1.375rem + 1.5vw);
}
@media (min-width: 1200px) {
  .e {
    font-size: 2.5rem !important;
  }
}


<svg
  xmlns="http://www.w3.org/2000/svg"
  width="16"
  height="16"
  viewBox="0 0 16 16"
  role="img"
  class="a b c d e f g h code-icon"
>
  <path
    d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"
  ></path></svg
>;
"
`;
